--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -3,13 +3,10 @@ driver:
   name: vagrant
 
 provisioner:
-  name: chef_solo
+  name: ansible
 
 platforms:
-  - name: ubuntu-14.04
-  - name: centos-7.2
+  - name: CentOS
 
 suites:
   - name: default
-    run_list:
-    attributes:
