add pip and ansible

--- a/ks.cfg
+++ b/ks.cfg
@@ -43,6 +43,10 @@ sed -i "s/^.*requiretty/#Defaults requiretty/" /etc/sudoers
 /bin/chmod 0400 /home/vagrant/.ssh/*
 
 yum -y update
+yum -y install epel-release
+yum -y install python-pip
+pip install --upgrade pip
+pip install ansible
 yum clean all
 %end
 
