--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -3,7 +3,8 @@ driver:
   name: vagrant
 
 provisioner:
-  name: ansible
+  name: shell
+  require_chef_for_busser: false
 
 platforms:
   - name: CentOS
